# InteractiveTopicModel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: dbpedia_vignette.ipynb
src/interactive_topic_model/: __init__.py  components.py  core.py  data_structures.py  exceptions.py  protocols.py  utils.py  visualization.py
